fixed spinner dimensions on mobile

--- a/react-dashboard/src/App.scss
+++ b/react-dashboard/src/App.scss
@@ -1,7 +1,10 @@
 @import "./scss/variables.scss";
 
+
+
 .flex-wrapper-main {
   display: flex;
+  height:92vh;
 }
 
 body {
@@ -16,6 +19,7 @@ body {
 .data-wrapper {
   padding: 15px;
   width: 100%;
+  height: 100%;
   margin: auto;
 }
 
