--- a/react-dashboard/src/components/Spinner/spinner.scss
+++ b/react-dashboard/src/components/Spinner/spinner.scss
@@ -3,7 +3,7 @@
 .spinner-wrapper {
   background: $primary;
   position: relative;
-  z-index: 50;
+  z-index: 1;
   height: 100%;
   width: 100%;
   display: flex;
