--- a/react-dashboard/src/index.scss
+++ b/react-dashboard/src/index.scss
@@ -23,3 +23,8 @@ code {
   
 }
 
+.App {
+  width:100%;
+  height:100%;
+}
+
